# Paper1

./: .env.example  .gitignore  CONTRIBUTIONS_AND_STATUS_VI.md  EXPERIMENT_GUIDE_V2.md  PAPER_EXPERIMENT_CHECKLIST.md  QUICK_RUN_PATH_VI.md  README.md  REPRODUCTION_GUIDE_VI.md  RUN_MINI_FIRST_VI.md  docker-compose.yml  docs.md  implementation_map.md  proposal.md  pyproject.toml  requirements.txt
agents/: README.md
classifier/: README.md
common/: auto_tuner.py  config.py  deepeval_models.py  env_setup.py  logger.py  models.py  observability.py  protocol.py  rate_limiter.py
control_panel/: app.py  task_catalog.py
core/: reasoning_equilibrium.py
data_pipeline/: README.md  build_ontology_dataset.py  build_policy_dataset.py  split_datasets.py
diagnostics/: README.md
docs/: ACADEMIC_CONTRIBUTIONS_MANIFESTO_VI.md  ACADEMIC_FORMALIZATION_Q1.md  ANNOTATION_GUIDELINES_VI.md  CONTRIBUTIONS_AND_STATUS_VI.md  FINAL_RESEARCH_MANIFESTO_VI.md  FUTURE_RESEARCH_ROADMAP_Q1.md  OPTIMIZATION_STRATEGY.md  Q1_PAPER_SYNTHESIS_VI.md  Q1_RESEARCH_FRAMEWORK_MANIFESTO_VI.md  REPRODUCTION_GUIDE_VI.md  REPRODUCTION_KIT_GUIDE.md  RUN_GUIDE_VI.md  RUN_MINI_FIRST_VI.md  RUN_ORDER.md  SLIDE_REPORT_CONTENT_VI.md  SOTA_AND_DATASETS_STRATEGY.md  THEORETICAL_CLAIMS_AND_PROOF_SKETCH.md  TROUBLESHOOTING_VI.md  implementation_map.md  proposal.md
domain_adapters/: README.md
eval/: README.md
experiments/: README.md  architecture_validity.py  plotting.py  theorem_suite.py
knowledge_graph/: README.md
log_transformation/: README.md
reasoning_ontology/: README.md
reports/: PROGRESS_REPORT_2026_05_12.md
scripts/: README.md  _experiment_presets.py  generate_paper_plots.py  pre_flight_check.py  (+48 more)
(+78 files in other folders)
